--- a/Menu/phukien.html
+++ b/Menu/phukien.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         
         <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-        <script type="text/javascript" src="../js/jquery.js"></script>
+        <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="../js/script.js"></script>
         <script type="text/javascript" src="../js/bootstrap.min.js"></script>
     </head>
@@ -19,139 +19,92 @@
                     <div id="search">
                             <input type="text" name="ten" value="" placeholder="Tìm kiếm từ khóa">
                             <input type="submit" name="submit" value="Tìm kiếm">
-                            </form> 
-                    <form name="frmsearch" method="POST" action="">                       
+                            </form>  
+                        </div><form name="frmsearch" method="POST" action="">
+                        
                     </div>
-                    <div id="menu">
-                        <ul id="menu_top">
-                            <li><a href="../webgiay.html">Trang chủ</a></li>
-                            <li><a href="../Menu/khuyenmai.html">Khuyến Mãi</a></li>
-                            <li><a href="../Menu/giaynam">Giày Nam</a>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" id="menu">
+                        <ul id="menu_top">  
+                            <li class="col-lg-2 col-md-2 col-sm-2 col-xs-2 "><a href="../webgiay.html" class="glyphicon glyphicon-home"> Trang Chủ</a></li>
+                            <li class="col-lg-2 col-md-2 col-sm-2 col-xs-2"><a href="../Menu/khuyenmai.html" class="glyphicon glyphicon-flash"> Khuyến Mãi</a></li>
+                            <li class="col-lg-2 col-md-2 col-sm-2 col-xs-2"><a href="../Menu/giaynam.html" class="glyphicon glyphicon-th-list"> Hãng Giày</a>
                                 <ul>
                                     <li><a href="">NIKE</a></li>
                                     <li><a href="">ADIDAS</a></li>
                                     <li><a href="">VANS</a>
                                 </ul>
                             </li>
-                            <li><a href="">Giày Nữ</a>
-                                <ul>
-                                    <li><a href="">NIKE</a></li>
-                                    <li><a href="">Chanel</a></li>
-                                    <li><a href="">Gucci</a>
-                                </ul>
-                            </li>
-                            <li><a href="../Menu/giaydoi.html">Giày Đôi</a></li>
-                            <li><a href="../Menu/phukien.html">Phụ Kiện</a></li>                            
+                            <li class="col-lg-2 col-md-2 col-sm-2 col-xs-2"><a href="../Menu/giaydoi.html">Giày Đôi</a></li>
+                            <li class="col-lg-2 col-md-2 col-sm-2 col-xs-2"><a href="../Menu/phukien.html" class="glyphicon glyphicon-bell"> Phụ Kiện</a></li>                            
                         </ul>                   
                     </div>
-                 </div>
+                </div>
             </div>
-            <div class="images">
-                <img src="../images/biapk1.jpg" width="100% >
-        <div class="row" >
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="center">
-                <div class="box_center">
-                     <div class="box_center_top">
-                        <div class="box_center_top_l">
-                                <a href="">SP Bán Chạy Nhất</a>     
-                        </div>
-                            <div class="box_center_top_r"></div>
-                            <div class="clearfix"></div>
-                         </div>
-                         <div class="box_center_main">
-                            <div class="row">
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="pk1"><img src="../images/pk1.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Mũ lưỡi trai Nâu <br>Giá : <del> 2$ </del>   -  1$</a>      
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="pk2"><img src="../images/pk2.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Mũ Vành Đen <br> Giá : 4$</a>      
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="pk6"><img src="../images/pk6.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Kính Fanshion <br> Giá : 0,5$</a>      
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="pk7"><img src="../images/pk7.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Mũ Lưỡi Trai Hồng <br> Giá : 1,5$</a>      
-                                </div>
-                            </div>  
-                         </div>
-                    </div>
-                    <div class="box_center">
-                         <div class="box_center_top">
-                            <div class="box_center_top_l">
-                                <a href="">Sản phẩm nổi bật </a>     
-                            </div>
-                            <div class="box_center_top_r"></div>
-                            <div class="clearfix"></div>
-                         </div>
-                         <div class="box_center_main">
-                            <div class="row">
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="pk4"><img src="../images/pk4.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Mũ Lưỡi Trai Đỏ <br>Giá : <del> 2$ </del>   -  1$</a>      
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="pk5"><img src="../images/pk5.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Mũ Vành Trắng <br> Giá : 0.5$</a>      
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="pk8"><img src="../images/pk8.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Khăn TurBan Xanh Trắng <br> Giá : 1,5$</a>      
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="pk4"><img src="../images/pk9.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Khăn TurBan Đen <br> Giá : 1,5$</a>      
-                                </div>
-                            </div>    
-                         </div>
-                    </div>
-                    <div class="box_center">
-                         <div class="box_center_top">
-                            <div class="box_center_top_l">
-                                <a href="">Sản Phẩm</a>     
-                            </div>
-                            <div class="box_center_top_r"></div>
-                            <div class="clearfix"></div>
-                         </div>
-                         <div class="box_center_main">
-                            <div class="row">
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="pk10"><img src="../images/pk10.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Túi Supermen <br>Giá : <del> 3$ </del>   -  1$</a>      
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="pk11"><img src="../images/pk11.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Túi 2017 <br> Giá : 1$</a>      
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="pk1"><img src="../images/pk1.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Mũ Lưỡi Trai Nâu <br> Giá : 1,5$</a>      
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="pk2"><img src="../images/pk2.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Mũ Vành Đen <br> Giá : 0,5$</a>      
-                                </div>
-                            </div>  
-                         </div>
-                    </div>                      
-                </div>              
-            </div>
+        <div class="images">
+                <img src="../images/biapk1.jpg" width="100%" height="500px" >
         </div>
-    </div>
-    <div id="bg_footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="footer">
-                    <p></p>
-                    <p></p>
-                    <p>Điện thoại:01694253555</p>
-                    <p>Email:phuctp14@gmail.com</p>                    
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" id="left">             
+                    <div class="box">
+                        <div class="box_top"></div>
+                        <div class="box_main"> </div>
+                    </div>
+                    <div class="box">
+                        <div class="box_top">
+                            <p>Hỗ trợ trực tuyến</p>        
+                        </div>
+                        <div class="box_main">
+                            <div id="support">
+                                <p><a href=""><img src="../images/yahoo.png"></a><a href=""><img src="../images/skype.png"></a></p>   
+                                <p>Hotline:&nbsp;<span>01694253555</span></p>
+                                <p>Email:&nbsp;hotro@ttm.edu.vn</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9" id="center">
+                    <div class="box_center">
+                        <div class="box_center_top">
+                            <div class="box_center_top_l">
+                                <a href="">Danh Sách Sản Phẩm</a>     
+                            </div>
+                            <div class="box_center_top_r"></div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="box">
+                            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" id="menu_box" >
+                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
+                                    <a href="" class="pk1"><img src="../images/pk1.jpg" class="img-thumbnail" width="100%" height="200px">   Mũ  Nâu <br>Giá :  1.200.000 VNĐ - <del> 1.000.000 VNĐ </a>
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
+                                    <a href="" class="pk2"><img src="../images/pk2.jpg" class="img-thumbnail" width="100%" height="200px">   Mũ Đen <br> Giá : 800.000 VNĐ</a>
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 ">
+                                    <a href="" class="pk3"><img src="../images/pk3.jpg" class="img-thumbnail" width="100%" height="200px">     Mắt Kính <br> Giá : 700.000 VNĐ</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>              
                 </div>
             </div>
         </div>
-    </div>
+            <div id="bg_footer">
+                <div class="container-fluid">
+                    <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="footer">
+                        <p></p>
+                        <p></p>
+                        <p>Điện thoại:01694253555</p>
+                        <p>Email:phuctp14@gmail.com</p>                    
+                    </div>
+                    </div>
+                </div>
+            </div>
     </body>
 </html>
