--- a/giohang.html
+++ b/giohang.html
@@ -3,13 +3,14 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Xây dựng website</title>
-        <link rel="stylesheet" type="text/css" href="css/style1.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
-        <script type="text/javascript" src="js/script.js"></script>
+        
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
     </head>
     <body>
+	<!--Phần header : Bao gồm logo trang web -->
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" id="header">
@@ -18,46 +19,41 @@
                     </div>
 				</div>
 			</div>
+	<!--Bảng nhập liệu -->
 				<div class="container">
-					<div class="shoppingcard"  >
-						<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" id="">
-							<h2>Thông tin đặt hàng</h2>
-							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" id="">
-									<p><label for="name">Họ và Tên </label><input id="name" type="text" placeholder="   Vui lòng nhập họ và tên" title="Nhập họ và tên " ></p>
-									<p><label for="numberphone">Số Điện Thoại  </label><input id="phone" type="numberphone" placeholder="   Vui lòng nhập số điện Thoại"  title="Nhập Số Điện Thoại " ></p>
-									<p><label for="adress">Tỉnh / Thành Phố  </label><input id="adress" placeholder="   Vui lòng nhập vào tên Thành Phố" title="Nhập Thành phố "></p>
-									<p><label for="adress">Quận / Huyện  </label><input id="adress" placeholder="   Vui lòng nhập vào tên quận / huyện" title="Nhập quận/huyện "></p>
-							</div>
-							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" id="">
-									<p><label for="adress">Phường / Xã  </label><input id="adress" title="Nhập phường xã " placeholder="   Vui lòng nhập vào tên phường / xã"></p>
-									<p><label for="adress">Địa chỉ cụ thể  ( Tòa nhà  , Số nhà , )</label><input id="adress" type="text" placeholder="   Vui lòng nhập Địa chỉ " title="Nhập Địa chỉ cụ thể "></p>
-									<p><label for="Email">Email  </label><input id="Email" type="text" title="Nhập địa chỉ Email " placeholder="   Vui lòng nhập email" ></p>
+					<form name="formnhaplieu" onsubmit="return NhapLieu()">
+						<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 col-md-push-3" id="">
+							<h1>Thông tin đặt hàng</h2>
+							<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 " id="">
+									<p><label for="name">Họ và Tên </label><br>
+									<input id="name" type="text" class="form-control" placeholder="Vui lòng nhập họ và tên" title="Nhập họ và tên" value=""></p>
+									<span id="span1" style="color:#FF0000;"></span>
+									<p><label for="numberphone">Số Điện Thoại</label><br>
+									<input id="phone" type="numberphone" class="form-control" placeholder="Vui lòng nhập số điện Thoại"  title="Nhập Số Điện Thoại " ></p>
+									<span id="span2" style="color:#FF0000;"></span>
+									<p><label for="adress">Tỉnh / Thành Phố</label><br>
+									<input id="adress1" class="form-control" placeholder="Vui lòng nhập vào tên Thành Phố" title="Nhập Thành phố "></p>
+									<span id="span3" style="color:#FF0000;"></span>
+									<p><label for="adress">Quận / Huyện</label><br>
+									<input id="adress2" class="form-control" placeholder="Vui lòng nhập vào tên quận / huyện" title="Nhập quận/huyện "></p>
+									<span id="span4" style="color:#FF0000;"></span>
+									<p><label for="adress">Phường / Xã </label><br>
+									<input id="adress3" title="Nhập phường xã" class="form-control" placeholder="Vui lòng nhập vào tên phường / xã"></p>
+									<span id="span5" style="color:#FF0000;"></span>
+									<p><label for="adress">Địa chỉ cụ thể (Tòa nhà, Số nhà)</label><br>
+									<input id="adress4" type="text" class="form-control" placeholder="Vui lòng nhập Địa chỉ" title="Nhập Địa chỉ cụ thể "></p>
+									<span id="span6" style="color:#FF0000;"></span>
+									<p><label for="Email">Email </label><br>
+									<input id="email" type="text" title="Nhập địa chỉ Email" class="form-control" placeholder="Vui lòng nhập email" ></p>
+									<span id="span7" style="color:#FF0000;"></span>
 									<br>
-									<button id="button">XÁC NHẬN ĐẶT HÀNG</button>				
+									<input type="submit" class="button btn btn-info" value="XÁC NHẬN ĐẶT HÀNG"></input>				
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" id="shoppingcard_right" >
-							<h2>Thông tin sản phẩm</h2>
-							<label >Số Lượng </label>
-							<select id="combobox" >
-								<option value="">1</option>
-								<option value="2">2</option>
-								<option value="3">3</option>
-								<option value="4">4</option>
-								<option value="5">5</option>
-							</select>
-							<br>
-							<span >Phí giao hàng : </span>
-							<br>
-							<span>Tổng Cộng : </span>
-
-
-						</div>
-
+					</form>
 					</div>
 				</div>
-		</div>
-
+	<!-- Phần footer -->
 		<div class="container-fluid">
 			<div id="bg_footer">
 				<div class="container-fluid">
@@ -72,5 +68,6 @@
 				</div>
 			</div>
 		</div>
+		<script type="text/javascript" src="js/scriptNhapLieu.js"></script>
    	</body>
 </html> 
